# ToU_AKL

./: .gitignore  README.md  pyproject.toml
inputs/: PnR_Zones.csv
inputs/land_use_assumptions/: Landuse_Detailed_Table_2018_Slot_12.csv  Landuse_Detailed_Table_2026_Slot_16.csv  MSM Land Use Definitions.docx
inputs/local_board_areas/: akl_lba.geojson
inputs/msm_link_types/: link_types.csv
inputs/msm_zones/: 21_Sector_ga.ens  MSM2018_zones.dbf  MSM2018_zones.sbn  MSM2018_zones.sbx  MSM2018_zones.shp.xml  MSM2018_zones.shx  MSMzone-Sector.dbf  MSMzone-Sector.shp  MSMzone-Sector.shx  MSMzones_sector_lba_crosswalk.gpkg  Sectors.gpkg  msmzone_lba_sector_crosswalk.csv  sectors.parquet
inputs/mx_map/: mx_map.csv  mx_map_2.csv
inputs/scenario_map/: Phase1-0_Scenario_Map.csv  Phase2-0_Scenario_Map.csv  Phase2-1_Scenario_Map.csv
inputs/sector_map/: 19_Internal_Sect_ga.ens
quarto/: app.py  network_assessment.qmd
src/: accessibility.ipynb  congestion.ipynb  congestion_metrics.py  consolidate_links.ipynb  consolidate_mx.ipynb  crop_images.ipynb  data.parquet  future_network_performance.ipynb  gc_accessibility.ipynb  gpkg_to_gpq.ipynb  read_charged_vehs.ipynb  sa2_lba_sector_lookup.csv  strategic_case.ipynb  throughput.ipynb  throughput_metrics.py  utils.py
src/ss/: congestion_20240909.ipynb
