[tool.poetry]
name = "akl-touch"
version = "0.1.0"
description = ""
authors = ["Tszchun Chow <tszchun.chow@arup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
duckdb = "^1.0.0"
folium = "^0.17.0"
mapboxgl = "^0.10.2"
plotly = "^5.23.0"
quarto = "^0.1.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
simpledbf = "^0.2.6"
pyarrow = "^17.0.0"
mapclassify = "^2.8.0"
shiny = "^1.0.0"
shinywidgets = "^0.3.3"
geoparquet = "^0.0.3"
openpyxl = "^3.1.5"
lxml = "^5.3.0"
seaborn = "^0.13.2"
geopandas = "^1.0.1"
natsort = "^8.4.0"
pyzipper = "^0.3.6"
fsspec = "^2025.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
